--- a/content.mkd
+++ b/content.mkd
@@ -317,16 +317,15 @@ A WebDAV-Push server MUST notify registered subscriptions of a subscribed collec
 
 ## Push Message
 
-The push message body consists of a `push-message` element, which contains a `{DAV:}propstat` element with a `{DAV:}prop` element that MUST contain the `topic` of the affected collection so that the client can identify it without doubt.
+The push message body consists of a `push-message` element, which contains information about the affected collection:
 
-In case of a _content update_ of the affected collection, the `{DAV:}prop` element MUST contain a `{DAV:}sync-token` element to allow a client to ignore the push message when it already knows the latest state.
+- a `topic` element with the collection topic, and
+- a `content-update` element in case of a _content update_, and/or
+- a `property-update` element in case of a _property update_.
 
-To indicate a _property update_ of the affected collection, a `{DAV:}status` element is added to the `{DAV:}prop` element:
+The `content-update` element SHOULD contain a `{DAV:}sync-token` element to allow a client to ignore the push message when it already knows the latest state.
 
-* status code 200 to indicate properties of the affected collection have changed,
-* status code 404 to indicate that the collection has been removed.
-
-Clients can determine whether a push message notifies about a content and/or property update by checking the presence of `{DAV:}sync-token`.
+[^todo] property-update: no sync-token or equivalent known
 
 When necessary or useful, a server MAY
 
@@ -334,7 +333,7 @@ When necessary or useful, a server MAY
 * delay push messages for a short time,
 * omit/merge push messages.
 
-However the server MUST ensure that such restrictions don't change the semantics of the push notifications so that the client can still perform its desired action. For instance, of a series of push messages that occur shortly after each other, all but the last message can be omitted – but only if they notify the client about the same thing (content updates with `{DAV:}sync-token`). If one of the push messages contains a `{DAV:}status` property to indicate a property update, it can't be omitted.
+The server MUST ensure that such measures don't change the overall meaning of the push notifications so that the client can still perform its desired action. For instance, of a series of push messages that contain only content updates and occur shortly after each other, all but the last message can be omitted. If one of the push messages signals a property update, it can't be just omitted because the client then wouldn't know that a property update happened.
 
 Example 1:
 
