Push message: content update and property update (#67)
* Update content.mkd

* Update sample push message

* Delete xml/sample-push-message2.xml

* Delete xml/sample-push-message3.xml

* Update definition and example

* Minor changes

--- a/content.mkd
+++ b/content.mkd
@@ -312,21 +312,24 @@ A WebDAV-Push server MUST notify registered subscriptions of a subscribed collec
 - on a _content update_ of the collection, if this was requested during subscription registration,
 - on a _property update_ of the collection, if this was requested during subscription registration.
 
-[^todo] Content/property update changes
-
 
 ## Push Message
 
-The push message body consists of a `push-message` element, which contains a `{DAV:}propstat` element with a `{DAV:}prop` element that MUST contain the `topic` of the affected collection so that the client can identify it without doubt.
+The push message body consists of a `push-message` element, which contains information about the affected collection:
 
-In case of a _content update_ of the affected collection, the `{DAV:}prop` element MUST contain a `{DAV:}sync-token` element to allow a client to ignore the push message when it already knows the latest state.
+- a `topic` element with the collection topic,
+- a `content-update` element in case of a content update, and/or
+- a `property-update` element in case of a property update.
 
-To indicate a _property update_ of the affected collection, a `{DAV:}status` element is added to the `{DAV:}prop` element:
+The `content-update` element SHOULD contain a `{DAV:}sync-token` element so that a client can ignore the push message when it already knows the latest state.
 
-* status code 200 to indicate properties of the affected collection have changed,
-* status code 404 to indicate that the collection has been removed.
+Example:
 
-Clients can determine whether a push message notifies about a content and/or property update by checking the presence of `{DAV:}sync-token`.
+~~~
+{::include xml/sample-push-message.xml}
+~~~
+
+Here, both the contents and the properties of the collection with topic `O7M1nQ7cKkKTKsoS_j6Z3w` have changed. The new sync-token (after the change) is `http://example.com/sync/10`.
 
 When necessary or useful, a server MAY
 
@@ -334,31 +337,7 @@ When necessary or useful, a server MAY
 * delay push messages for a short time,
 * omit/merge push messages.
 
-However the server MUST ensure that such restrictions don't change the semantics of the push notifications so that the client can still perform its desired action. For instance, of a series of push messages that occur shortly after each other, all but the last message can be omitted – but only if they notify the client about the same thing (content updates with `{DAV:}sync-token`). If one of the push messages contains a `{DAV:}status` property to indicate a property update, it can't be omitted.
-
-Example 1:
-
-~~~
-{::include xml/sample-push-message1.xml}
-~~~
-
-Here, the contents of the collection with topic `O7M1nQ7cKkKTKsoS_j6Z3w` have changed and the new sync-token (after the change) is `http://example.com/ns/sync/1234`. The depth of one indicates that the notification was caused by addition/change/removal of an internal member.
-
-Example 2:
-
-~~~
-{::include xml/sample-push-message2.xml}
-~~~
-
-Here, the contents of the collection with topic `O7M1nQ7cKkKTKsoS_j6Z3w` have changed and the new sync-token (after the change) is `http://example.com/ns/sync/1234`. The infinite depth indicates that the notification was caused by addition/change/removal of a member.
-
-Example 3:
-
-~~~
-{::include xml/sample-push-message3.xml}
-~~~
-
-Here the server notifies the client that the collection with topic `O7M1nQ7cKkKTKsoS_j6Z3w` is no longer available on the server. The zero depth indicates that this message is about the collection itself, and not about its members.
+The server MUST ensure that such measures don't change the overall meaning of the push notifications so that the client can still perform its desired action. For instance, of a series of push messages that contain only content updates and occur shortly after each other, all but the last message can be omitted. If one of the push messages signals a property update, it can't be just omitted because the client then wouldn't know that a property update happened.
 
 
 ## Removal of Invalid Subscriptions
